[package]
name = "fjall"
description = "Log-structured, embeddable key-value storage engine"
license = "MIT OR Apache-2.0"
version = "2.11.2"
edition = "2021"
rust-version = "1.76.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/fjall"
homepage = "https://github.com/fjall-rs/fjall"
keywords = ["database", "key-value", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]

[lib]
name = "fjall"
path = "src/lib.rs"

[features]
default = ["single_writer_tx", "lz4"]
lz4 = ["lsm-tree/lz4"]
miniz = ["lsm-tree/miniz"]
bytes = ["lsm-tree/bytes"]
single_writer_tx = []
ssi_tx = []
__internal_whitebox = []

[dependencies]
byteorder = "1.5.0"
byteview = "0.6.1"
lsm-tree = { version = "~2.10.2", default-features = false, features = [] }
log = "0.4.21"
std-semaphore = "0.1.0"
tempfile = "3.10.1"
path-absolutize = "3.1.1"
dashmap = "6.0.1"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nanoid = "0.4.0"
test-log = "0.2.16"
rand = "0.9.0"

# half 2.5.0 has MSRV 1.81
half = "=2.4.0"

[package.metadata.cargo-all-features]
denylist = ["__internal_whitebox"]
skip_feature_sets = [["ssi_tx", "single_writer_tx"]]

[[bench]]
name = "lsmt"
harness = false
path = "benches/fjall.rs"
