[package]
name = "fjall"
description = "Log-structured, embeddable key-value storage engine"
license = "MIT OR Apache-2.0"
version = "2.11.3"
edition = "2021"
rust-version = "1.89.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/fjall"
homepage = "https://github.com/fjall-rs/fjall"
keywords = ["database", "key-value", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]

[lib]
name = "fjall"
path = "src/lib.rs"

[features]
default = ["single_writer_tx", "lz4"]
lz4 = ["lsm-tree/lz4"]
# bytes = ["lsm-tree/bytes"]
single_writer_tx = []
ssi_tx = []
metrics = ["lsm-tree/metrics"]
__internal_whitebox = []

[dependencies]
byteorder = "1.5.0"
byteview = "0.6.1"
lsm-tree = { git = "https://github.com/fjall-rs/lsm-tree", rev = "0e71baf465cc942aa64793943247a12d5d653860", default-features = false, features = [
  "use_unsafe",
] }
log = "0.4.27"
std-semaphore = "0.1.0"
tempfile = "3.20.0"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nanoid = "0.4.0"
test-log = "0.2.18"
rand = "0.9.2"

[[bench]]
name = "lsmt"
harness = false
path = "benches/fjall.rs"

[package.metadata.cargo-all-features]
denylist = ["__internal_whitebox"]
skip_feature_sets = [["ssi_tx", "single_writer_tx"]]
