[package]
name = "fjall"
description = "Log-structured, embeddable key-value storage engine"
license = "MIT OR Apache-2.0"
version = "3.0.2"
edition = "2021"
rust-version = "1.91.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/fjall"
homepage = "https://github.com/fjall-rs/fjall"
keywords = ["database", "key-value", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]

[lib]
name = "fjall"
path = "src/lib.rs"

[features]
default = ["lz4"]
lz4 = ["lsm-tree/lz4", "dep:lz4_flex"]
bytes_1 = ["lsm-tree/bytes_1"]
metrics = ["lsm-tree/metrics"]
__internal_whitebox = []

[dependencies]
byteorder = { package = "byteorder-lite", version = "0.1.0" }
byteview = "~0.10.1"
lsm-tree = { version = "~3.0.2", default-features = false, features = [] }
log = "0.4.27"
tempfile = "3.20.0"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
lz4_flex = { version = "0.11.5", optional = true }
flume = { version = "0.12.0", default-features = false }

[dev-dependencies]
nanoid = "0.4.0"
test-log = "0.2.18"
rand = "0.9.2"

[package.metadata.cargo-all-features]
denylist = ["__internal_whitebox"]
