[package]
name = "fjall"
description = "LSM-based key-value storage engine"
version = "0.5.0"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/fjall"
homepage = "https://github.com/fjall-rs/fjall"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fjall"
path = "src/lib.rs"

[features]
default = ["bloom"]
bloom = ["lsm-tree/bloom"]
segment_history = ["lsm-tree/segment_history"]

[dependencies]
byteorder = "1.5.0"
crc32fast = "1.3.2"
env_logger = "0.10.1"
lsm-tree = { version = "0.4.0", default-features = false }
log = "0.4.20"
std-semaphore = "0.1.0"
tempfile = "3.9.0"
fs_extra = "1.3.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nanoid = "0.4.0"
test-log = "0.2.14"
rand = "0.8.5"

[[bench]]
name = "lsmt"
harness = false
path = "benches/fjall.rs"
