[package]
name = "actix-kv"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10.0"
fjall = { path = "../../" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.99"

[dev-dependencies]
tempfile = "3.8.1"
