[package]
name = "actix-triplestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10.0"
lsm-tree = { path = "../../" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
