[package]
name = "axum-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10.0"
fjall = { path = "../../" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.8.1"
