[package]
name = "axum-kv"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
env_logger = "0.10"
fjall = { path = "../../" }
log = { version = "0.4", features = ["release_max_level_info"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.4"
