[package]
name = "migration-lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.9"
fjall = { path = "../../" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
