[package]
name = "tx-atomic-counter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fjall = { path = "../../", default-features = false, features = [
  "bloom",
  "lz4",
  "ssi_tx",
] }
rand = "0.8.5"
