[package]
name = "simple-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsm-tree = { path = "../.." }
nanoid = "0.4.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"

[workspace]
